# venv-purge

./: .pre-commit-config.yaml  .ruff.toml  LICENSE  mypy.ini  pyproject.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yaml  codeql.yml  publish.yaml
docs/: contributing.md  development.md  user-guide.md
